@startuml entity-classes

package trilium_alchemy.core <<Frame>> {
  class BaseEntity {
  }

  class Note {
  }

  class BaseAttribute {
  }

  class Label {
  }

  class Relation {
  }

  class Branch {
  }

  BaseEntity <|-- Note
  BaseEntity <|-- BaseAttribute
  BaseEntity <|-- Branch
  BaseAttribute <|-- Label
  BaseAttribute <|-- Relation
}